# python-test

./: .gitignore  README.md
argumentparser_test/: nonsetting_default.py
argumentparser_test/call_other_module/: called.py
argumentparser_test/compare_pre_sleep/: after_parser.py  pre_parser.py
argumentparser_test/multi_args/: t01_over_one.py  t03_type_str.py  t05_double_multi.py
classes/: txx_class_copy.py
cmp_dict_class/: calc_time_class.py
configparser_test/: config.cfg
decorater/: t05_enter_exit.py  txx_trycatch.py
exception/: txx_contextmanager.py
import_test/dir1/: a.py
import_test/test_config/: main.py
import_test/test_config2/: main.py
importlib/out_lib/: liba.py
importlib/t01_from_path/: t0101_fullpath.py  t0102_relative_path.py
importlib/t02_function/: t0201_fanction.py
importlib/t03_plugin/: t0301_plugin.py
interface/: interface.py
json_test/: load.py  test.json  test_json.py
jupyter_test/jnotebook/: pyproject.toml
jupyter_test/jnotebook/jnotebook/: test.ipynb
py3_6_15/: README.md  pyproject.toml
py3_6_15/typehints/: t01_listdict.py  t02_interface.py
py3_8_10/: README.md
py3_8_10/mypy-test/: pyproject.toml  test.py
tkinter/: t1.py  t4_1_pack_default.py  t4_2_1_pack_left.py  t4_2_2_pack_right.py  t4_2_4_pack_top.py  t4_2_5_pack_all.py  t4_3_1_grid.py  t4_3_2_grid.py  t4_4_3_place.py  t5_1_widgets.py  t5_2_2_button.py  t5_2_4_button.py  t5_3_3_label.py  t5_4_1_entry.py  t5_5_1_frame.py  t5_5_3_frame.py  t5_5_5_frame.py  t5_7_2_canvas.py  t5_x_2_notebook.py  tx_x_x_stopwatch.py
venv-test/: README.md
(+245 files in other folders)
