[tool.poetry]
name = "jnotebook"
version = "0.1.0"
description = ""
authors = ["Kenta Fukuhara <KAkikaku.tateyama@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
